# AndroidFlamSlam

./: .gitignore  .gitmodules  build.gradle.kts  compile_shaders.sh  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/flam/androidflamslam/: ExampleInstrumentedTest.java
app/src/main/cpp/: CMakeLists.txt  camera_renderer.hpp  native-lib.cpp  sokol.cpp  sokol.hpp
app/src/main/cpp/shaders/: quad.glsl  quad.glsl.h
app/src/main/java/com/flam/androidflamslam/: MainActivity.java  MainRenderer.java  MainSurfaceView.java  NativeBridge.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/flam/androidflamslam/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
